--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $header-height: 80px;
 $footer-height: 60px;
-$container-width: 1280px;
+$container-width: 100%;
 $bluefont: darkblue;
 $graylight: #cfcfcf;
 $gray-backgr: #eee;
