feat: add tasks list and timeline

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,7 +16,7 @@
     max-width: $container-width;
   }
 
-  .header-item {
+  .header_item {
     display: block;
     max-height: 32px;
     margin-right: 20px;
