--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,9 +1,14 @@
-$header-height: 80px;
+$header-height: 40px;
+$global-indent: 24px;
 $footer-height: 60px;
+$blue-dark: #262842;
 $container-width: 100%;
+$color-white: #fff;
 $bluefont: darkblue;
 $graylight: #cfcfcf;
 $gray-backgr: #eee;
-$default-font: 'Montserrat', sans-serif;
 $default-transition-duration: 0.4s;
 $default-transition-function: ease-out;
+$border-light: rgb(38 40 66 / 12%);
+$background-light: #f7f8fc;
+$inner-heading-height: 48px;
