--- a/src/components/TableTimeline/TableTimeline.module.scss
+++ b/src/components/TableTimeline/TableTimeline.module.scss
@@ -7,13 +7,13 @@
 
   flex-grow: 1;
   width: calc(100% - 390px);
-  height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
-  overflow: auto;
+  min-height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
+  overflow-x: auto;
 
   border-top: 1px solid $border-light;
   border-bottom: 1px solid $border-light;
   box-shadow: -8px 0 8px rgb(16 31 43 / 10%) inset;
   @media (max-width: $breakpoint-sm) {
-    width: 50%;
+    width: 55%;
   }
 }
