--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-white: #fff;
 $bluefont: darkblue;
 $graylight: #cfcfcf;
 $gray-backgr: #eee;
+$gray-light: #8b8c9e;
 $default-transition-duration: 0.4s;
 $default-transition-function: ease-out;
 $border-light: rgb(38 40 66 / 12%);
