--- a/src/components/ChartTasks/ChartTasks.module.scss
+++ b/src/components/ChartTasks/ChartTasks.module.scss
@@ -6,6 +6,7 @@
   width: 390px;
   min-height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
   overflow: hidden;
+  user-select: none;
 
   border: 1px solid $border-light;
   border-top-left-radius: 10px;
@@ -18,10 +19,10 @@
 .inner_heading {
   height: $inner-heading-height;
   padding: 16px;
-
   font-size: 14px;
-
+  font-weight: 500;
   background-color: $background-light;
+  border-bottom: 1px solid $border-light;
 }
 
 .tasks_list {
