--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -20,3 +20,9 @@
   align-items: center;
   justify-content: center;
 }
+
+%absolute-max {
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+}
