--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $footer-height: 60px;
 $blue-dark: #262842;
 $container-width: 100%;
 $color-white: #fff;
+$color-font-light: #a9a9b8;
 $bluefont: darkblue;
 $graylight: #cfcfcf;
 $gray-backgr: #eee;
