--- a/src/components/ChartHeader/ChartHeader.module.scss
+++ b/src/components/ChartHeader/ChartHeader.module.scss
@@ -24,7 +24,9 @@
 .header_btn {
   @extend %flex-centered !optional;
   position: relative;
-
+  cursor: pointer;
+  color: $blue-dark;
+  margin-left: 20px;
   width: 101px;
   height: 40px;
 
@@ -34,19 +36,63 @@
 
   .btn_text {
     display: block;
-
     font-weight: 500;
     font-size: 14px;
+    z-index: 1;
   }
 
-  &::before {
+  &:before {
     display: block;
     width: 13px;
     height: 18px;
     margin-right: 10px;
-
     background: url('../../assets/svg/arrow_download_regular.svg') center no-repeat;
-
     content: '';
+    z-index: 1;
+  }
+
+  &:after {
+    background-color: $background-light;
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform-origin: left;
+    transform: scaleX(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &:hover {
+    &:after {
+      transform: scaleX(1);
+    }
+  }
+}
+
+.btn_wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.alt_button {
+  padding: 2px 4px;
+  border-radius: 4px;
+  margin: 0 4px;
+  width: 66px;
+  height: 40px;
+  font-size: 11px;
+  position: relative;
+  background-color: $color-white;
+  border: 1px solid $border-light;
+  transition: all 0.3s ease-in-out;
+  @media (max-width: $breakpoint-sm) {
+    display: none;
+  }
+
+  &:hover {
+    background-color: $background-light;
   }
 }
