--- a/src/components/ChartTasks/ChartTaskRecursive/ChartTasksRecursive.module.scss
+++ b/src/components/ChartTasks/ChartTaskRecursive/ChartTasksRecursive.module.scss
@@ -3,7 +3,7 @@
 @use '../../../styles/abstracts/breakpoints' as *;
 
 .tasks_list_item {
-  height: 40px;
+  height: 39px;
   display: flex;
   align-items: center;
   border-bottom: 1px solid $border-light;
@@ -14,8 +14,11 @@
   color: #4cd964;
 }
 
-.task_list_inner {
+.task_item_inner {
   font-size: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .tasks_counter {
