--- a/src/components/ChartTimeline/ChartTimeline.module.scss
+++ b/src/components/ChartTimeline/ChartTimeline.module.scss
@@ -7,7 +7,7 @@
   user-select: none;
   flex-grow: 1;
   width: calc(100% - 390px);
-  min-height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
+  height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
   overflow-x: auto;
 
   border-top: 1px solid $border-light;
@@ -16,4 +16,9 @@
   @media (max-width: $breakpoint-sm) {
     width: 55%;
   }
+}
+
+.chart_timeline_graphics {
+  @extend %absolute-max !optional;
+  z-index: 1;
 }
