--- a/src/components/ChartTasks/ChartTasks.module.scss
+++ b/src/components/ChartTasks/ChartTasks.module.scss
@@ -3,14 +3,18 @@
 @use '../../styles/abstracts/breakpoints' as *;
 
 .chart_tasks {
-  width: 390px;
-  height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
-  overflow: hidden;
+  width: 28%;
+  max-width: 500px;
+  min-width: 150px;
+  // height: calc(100vh - $header-height - $global-indent - 16px - $global-indent * 0.5);
+  // overflow: hidden;
+  border-right: 1px solid $border-light;
   user-select: none;
-
-  border: 1px solid $border-light;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  position: sticky;
+  left: 0;
+  z-index: 4;
+  background: $color-white;
+  // resize: horizontal;
   @media (max-width: $breakpoint-sm) {
     width: 45%;
   }
@@ -23,13 +27,24 @@
   font-weight: 500;
   background-color: $background-light;
   border-bottom: 1px solid $border-light;
-  overflow: hidden;
-  position: relative;
+  // overflow: hidden;
+  position: sticky;
+  top: 0;
+  z-index: 4;
 }
 
 .tasks_list {
   height: calc(100% - $inner-heading-height);
+  // overflow-x: auto;
   overflow-x: auto;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    display: none;
+  }
 }
 
 .alt_button {
