--- a/src/components/ChartHeader/ChartHeader.module.scss
+++ b/src/components/ChartHeader/ChartHeader.module.scss
@@ -24,49 +24,60 @@
 .header_btn {
   @extend %flex-centered !optional;
   position: relative;
-  cursor: pointer;
-  color: $blue-dark;
-  margin-left: 20px;
+
   width: 101px;
   height: 40px;
+  margin-left: 20px;
+
+  color: $blue-dark;
 
   background: $color-white;
   border: 1px solid rgb(38 40 66 / 12%);
   border-radius: 10px;
+  cursor: pointer;
 
   .btn_text {
+    z-index: 1;
+
     display: block;
+
     font-weight: 500;
     font-size: 14px;
-    z-index: 1;
   }
 
-  &:before {
+  &::before {
+    z-index: 1;
+
     display: block;
     width: 13px;
     height: 18px;
     margin-right: 10px;
+
     background: url('../../assets/svg/arrow_download_regular.svg') center no-repeat;
+
     content: '';
-    z-index: 1;
   }
 
-  &:after {
-    background-color: $background-light;
-    content: '';
+  &::after {
     position: absolute;
-    left: 0;
     bottom: 0;
-    transform-origin: left;
-    transform: scaleX(0);
+    left: 0;
+
     width: 100%;
     height: 100%;
+
+    background-color: $background-light;
     border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+
     transition: all 0.3s ease-in-out;
+
+    content: '';
   }
 
   &:hover {
-    &:after {
+    &::after {
       transform: scaleX(1);
     }
   }
@@ -78,15 +89,19 @@
 }
 
 .alt_button {
-  padding: 2px 4px;
-  border-radius: 4px;
-  margin: 0 4px;
+  position: relative;
+
   width: 66px;
   height: 40px;
+  margin: 0 4px;
+  padding: 2px 4px;
+
   font-size: 10px;
-  position: relative;
+
   background-color: $color-white;
   border: 1px solid $border-light;
+  border-radius: 4px;
+
   transition: all 0.3s ease-in-out;
   @media (max-width: $breakpoint-sm) {
     display: none;
