--- a/src/components/ChartTasks/ChartTaskRecursive/ChartTasksRecursive.module.scss
+++ b/src/components/ChartTasks/ChartTaskRecursive/ChartTasksRecursive.module.scss
@@ -3,28 +3,27 @@
 @use '../../../styles/abstracts/breakpoints' as *;
 
 .tasks_list_item {
-  height: 39px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid $border-light;
-  cursor: pointer;
   width: 100%;
+  height: 39px;
+  font-size: 14px;
+  border-bottom: 1px solid $border-light;
 }
 
 .task_item_type_1 {
   color: #4cd964;
 }
 
-.task_item_inner {
-  font-size: 14px;
-  //overflow: hidden;
-  //white-space: nowrap;
-  // text-overflow: ellipsis;
+.tasks_counter {
+  margin-right: 10px;
+  color: $gray-light;
+  font-size: 12px;
+  font-style: italic;
 }
 
-.tasks_counter {
-  font-style: italic;
-  margin-right: 10px;
-  font-size: 12px;
-  color: $gray-light;
+.tasks_title {
+  // overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
