--- a/src/components/ChartTimeline/ChartTimelineRecursive/ChartTimelineRecursive.module.scss
+++ b/src/components/ChartTimeline/ChartTimelineRecursive/ChartTimelineRecursive.module.scss
@@ -2,9 +2,36 @@
 @use '../../../styles/abstracts/variables' as *;
 @use '../../../styles/abstracts/breakpoints' as *;
 
-.chart_line {
+.chart_item {
   display: flex;
   align-items: center;
   height: 39px;
-  border: 1px solid red;
+  font-size: 14px;
+}
+
+.chart_line {
+  height: 24px;
+  background-color: $line-background-lightblue;
+  border: 1px solid $line-border-lightblue;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+.chart_line_type_2,
+.chart_line_type_5 {
+  background-color: $line-background-yellow;
+  border: 1px solid $line-border-yellow;
+}
+
+.chart_line_type_3,
+.chart_line_type_4 {
+  background-color: $line-background-green;
+  border: 1px solid $line-border-green;
+}
+
+.chart_task_title {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 200px;
 }
