--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -14,3 +14,15 @@ $default-transition-function: ease-out;
 $border-light: rgb(38 40 66 / 12%);
 $background-light: #f7f8fc;
 $inner-heading-height: 48px;
+
+$line-background-lightblue: #e2ebff;
+$line-border-lightblue: #497cf6;
+$line-background-yellow: #fff2e0;
+$line-border-yellow: #ffa530;
+$line-background-green: #cff0d6;
+$line-border-green: #2db77b;
+
+$task-backgr-purple: #f5f1fe;
+$task-backgr-green: #eef9f4;
+$task-backgr-yellow: #fefbf0;
+$task-backgr-red: #faeff2;
